--- a/index.html
+++ b/index.html
@@ -153,22 +153,22 @@
                 <h2 class="section-title">Work</h2>
 
                 <div class="work__container bd-grid">
-                    <a href="https://osamaosy.github.io/QuizApp" class="work__img" target="_blank">
+                    <a href="" class="work__img" target="_blank">
                         <img src="assets/img/work1.jpg" alt="">
                     </a>
-                    <a href="https://osamaosy.github.io/Hangman-Game" class="work__img" target="_blank">
+                    <a href="" class="work__img" target="_blank">
                         <img src="assets/img/work2.jpg" alt="">
                     </a>
-                    <a href="https://osamaosy.github.io/Front-EndTutorial/" class="work__img" target="_blank">
+                    <a href="" class="work__img" target="_blank">
                         <img src="assets/img/work3.jpg" alt="">
                     </a>
-                    <a href="https://osamaosy.github.io/memory_game" class="work__img" target="_blank">
+                    <a href="" class="work__img" target="_blank">
                         <img src="assets/img/work4.jpg" alt="">
                     </a>
-                    <a href="https://osamaosy.github.io/ToDoList" class="work__img" target="_blank">
+                    <a href="" class="work__img" target="_blank">
                         <img src="assets/img/work5.jpg" alt="">
                     </a>
-                    <a href="https://osamaosy.github.io/typing-speed" class="work__img" target="_blank">
+                    <a href="" class="work__img" target="_blank">
                         <img src="assets/img/work6.jpg" alt="">
                     </a>
                 </div>
