--- a/index.html
+++ b/index.html
@@ -153,24 +153,19 @@
                 <h2 class="section-title">Work</h2>
 
                 <div class="work__container bd-grid">
-                    <a href="" class="work__img" target="_blank">
-                        <img src="assets/img/work1.jpg" alt="">
+                    <a href="https://today-i-learned-ahmedsamy.netlify.app/" class="work__img" target="_blank">
+                        <img src="assets/img/work1.png" alt="">
                     </a>
-                    <a href="" class="work__img" target="_blank">
-                        <img src="assets/img/work2.jpg" alt="">
+                    <a href="https://github.com/Ahmeddsamy/eCommerce-website" class="work__img" target="_blank">
+                        <img src="assets/img/work2.png" alt="">
                     </a>
-                    <a href="" class="work__img" target="_blank">
-                        <img src="assets/img/work3.jpg" alt="">
+                    <a href="https://ahmeddsamy.github.io/Dice-Game/" class="work__img" target="_blank">
+                        <img src="assets/img/work3.png" alt="">
                     </a>
-                    <a href="" class="work__img" target="_blank">
-                        <img src="assets/img/work4.jpg" alt="">
+                    <a href="https://ahmeddsamy.github.io/Bank/" class="work__img" target="_blank">
+                        <img src="assets/img/work4.png" alt="">
                     </a>
-                    <a href="" class="work__img" target="_blank">
-                        <img src="assets/img/work5.jpg" alt="">
-                    </a>
-                    <a href="" class="work__img" target="_blank">
-                        <img src="assets/img/work6.jpg" alt="">
-                    </a>
+
                 </div>
             </section>
 
