--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Ahmed Samy</span><br> Back-End Developer</h1>
 
                     <a href="#contact" class="button">Contact</a>
-                    <a href="https://drive.google.com/file/d/15-nqNcbWdplD3FJZ2HOfn3Rp81gr7CEQ/view?usp=drive_link" class="button" target="_blank">CV</a>
+                    <a href="https://drive.google.com/file/d/15-nqNcbWdplD3FJZ2HOfn3Rp81gr7CEQ/view?usp=drive_link" class="button" target="_blank">Résumé</a>
                 </div>
 
                 <div class="home__social">
