--- a/index.html
+++ b/index.html
@@ -57,8 +57,11 @@
 
                 <div class="home__social">
                     <a href="https://www.linkedin.com/in/ahmedsamynashaat/" class="home__social-icon"><i class="fa-brands fa-linkedin-in"></i></a>
-                    <a href="https://www.facebook.com/ahmadeltonamly/" class="home__social-icon"><i class="fa-brands fa-facebook-f"></i></a>
                     <a href="https://github.com/Ahmeddsamy" class="home__social-icon"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://wa.me/+201100014322?text=Hello%21" class="home__social-icon"><i class="fa-brands fa-whatsapp"></i></a>
+
+                    <a href="https://www.facebook.com/ahmadeltonamly/" class="home__social-icon"><i class="fa-brands fa-facebook-f"></i></a>
+
                 </div>
 
                 <div class="home__img">
