--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="home__social">
                     <a href="https://www.linkedin.com/in/ahmedsamynashaat/" class="home__social-icon"><i class="fa-brands fa-linkedin-in"></i></a>
                     <a href="https://github.com/Ahmeddsamy" class="home__social-icon"><i class="fa-brands fa-github"></i></a>
-                    <a href="https://wa.me/+201100014322?text=Hello%21" class="home__social-icon"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="https://wa.me/+201100014322" class="home__social-icon"><i class="fa-brands fa-whatsapp"></i></a>
 
                     <a href="https://www.facebook.com/ahmadeltonamly/" class="home__social-icon"><i class="fa-brands fa-facebook-f"></i></a>
 
