--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
                     <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Ahmed Samy</span><br> Back-End Developer</h1>
 
                     <a href="#contact" class="button">Contact</a>
-                    <a href="https://drive.google.com/file/d/15-nqNcbWdplD3FJZ2HOfn3Rp81gr7CEQ/view?usp=drive_link" class="button" target="_blank">Résumé</a>
+                    <a href="https://drive.google.com/file/d/1GzkLopaxDaDtfvkfNmUIhDWYmmJKOsa1/view?usp=sharing">Résumé</a>
                 </div>
 
                 <div class="home__social">
                     <a href="https://www.linkedin.com/in/ahmedsamynashaat/" class="home__social-icon"><i class="fa-brands fa-linkedin-in"></i></a>
                     <a href="https://github.com/Ahmeddsamy" class="home__social-icon"><i class="fa-brands fa-github"></i></a>
-                    <a href="https://wa.me/+201100014322" class="home__social-icon"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="https://wa.me/+201028910997" class="home__social-icon"><i class="fa-brands fa-whatsapp"></i></a>
 
                     <a href="https://www.facebook.com/ahmadeltonamly/" class="home__social-icon"><i class="fa-brands fa-facebook-f"></i></a>
 
