--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Ahmed Samy</span><br> Back-End Developer</h1>
+                    <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Ahmed Samy</span><br> Back-End Developer</h1>
 
                     <a href="#contact" class="button">Contact</a>
                     <a href="https://drive.google.com/file/d/1GzkLopaxDaDtfvkfNmUIhDWYmmJKOsa1/view?usp=sharing" class = "button" target="_blank"     >Résumé</a>
@@ -87,7 +87,7 @@
                     </div>
                     
                     <div>
-                        <h2 class="about__subtitle">I'am Ahmed</h2>
+                        <h2 class="about__subtitle">I'm Ahmed</h2>
                         <p class="about__text">Dedicated MERN Stack Developer with a demonstrated ability to craft efficient and scalable web applications. Skilled in MongoDB, Express.js, React, and Node.js, I seamlessly integrate these technologies to deliver robust solutions. My passion for creating seamless user experiences, coupled with a knack for problem-solving, positions me as a valuable asset in driving innovative and high-performing projects.</p>           
                     </div>                                   
                 </div>
